--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,8 @@
 [tater]
-52.1.207.200 ansible_ssh_user=ubuntu
+54.175.138.187 ansible_ssh_user=ubuntu
 
+[prod]
+54.175.138.187 ansible_ssh_user=ubuntu
+
+[dev]
+52.1.207.200 ansible_ssh_user=ubuntu
