Adding a pause between stopping and starting supervisor service

--- a/roles/tater/handlers/main.yml
+++ b/roles/tater/handlers/main.yml
@@ -5,4 +5,4 @@
     sudo: yes
 
   - name: restart supervisor
-    service: name=supervisor state=restarted
+    shell: "service supervisor stop; sleep 10; service supervisor start"
