Added second node to inventory file

--- a/inventory.ini
+++ b/inventory.ini
@@ -5,4 +5,5 @@
 54.175.138.187 ansible_ssh_user=ubuntu
 
 [dev]
-52.1.207.200 ansible_ssh_user=ubuntu
+#52.1.207.200 ansible_ssh_user=ubuntu
+52.21.105.150 ansible_ssh_user=ubuntu
