--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -39,6 +39,10 @@
     template: src=ports.conf.j2 dest=/etc/apache2/ports.conf
     tags: apache
 
+  - name: Configure apache ssl
+    template: src=ssl.conf dest=/etc/apache2/mods-enabled/ssl.conf
+    tags: apache
+
   - name: Create DocumentRoot for custom error page
     file: path=/var/www/deploying state=directory
     tags: apache
